--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -97,6 +96,11 @@
                   <a href="" class="logo__link">Projects</a>
                   <a href="" class="logo__link">Blog</a>
                </nav>
+               <a href="#" class="logo__burger">
+                  <div class="logo__center"></div>
+                  
+               </a>
+               
             </div>
          </div>
       </div>
