new responsive blocks

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                   <img src="img/process/Layer_23.jpg
                   " alt="img">
                </div>
-               <div class="process__element process__element">
+               <div class="process__element">
                   <img src="img/process/Layer_24.jpg" alt="img">
                </div>
                <div class="process__element process__element--text">
@@ -470,6 +470,10 @@
                      Development Mode
                   </a>
                </span>
+               <a href="#" class="logo__burger blogs__burger">
+                  <div class="logo__center"></div>
+                  
+               </a>
             </div>
             <div class="blogs__body">
                <div class="blogs__block">
