--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                   <a href="" class="logo__link">Projects</a>
                   <a href="" class="logo__link">Blog</a>
                </nav>
-               <div class="logo__burger">
-                     <span></span>
-                  
+               <div class="logo__menu">
+                  <div class="logo__burger">
+                        <span></span>
+                  </div>
                </div>
-               
             </div>
          </div>
       </div>
