--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
    </svg>
    <title>Document</title>
 </head>
-
 <body>
-   <header class="header">
+   <header class="header ">
       <div class="container">
          <div class="header__inner">
-            <div class="header__title">
+            <div class="header__title ">
                Sublime
             </div>
             <div class="header__text">
@@ -78,9 +77,9 @@
          </div>
       </div>
    </header>
-   <div class="logo">
+   <div class="logo _animate">
       <div class="container">
-         <div class="logo__inner">
+         <div class="logo__inner ">
             <div class="logo__body">
                <div class="logo__title">
                   <span>We</span> create Awesome Games
@@ -100,9 +99,9 @@
          </div>
       </div>
    </div>
-   <div class="about">
+   <div class="about _animate">
       <div class="container">
-         <div class="about__inner">
+         <div class="about__inner ">
             <div class="about__top">
                <div class="about__logo">
                   <div class="about__first">
@@ -186,33 +185,33 @@
                   </div>
                </div>
             </div>
-            <div class="about__bottom">
-               <div class="about__foot">
-                  <div class="about__subtitle">
-                     Featured <span>
-                     P</span>rojects
-                  </div>
-                  <nav class="about__nav">
-                     <div class="about__link line">
-                        all works
-                     </div>
-                     <div class="about__link">
-                        games
-                     </div>
-                     <div class="about__link">
-                        applications
-                     </div>
-                     <div class="about__link">
-                        content development
-                     </div>
-                  </nav>
-               </div>
-            </div>
          </div>
       </div>
    </div>
-   <div class="galery">
+   <div class="galery _animate">
       <div class="container">
+         <div class="about__bottom">
+            <div class="about__foot">
+               <div class="about__subtitle">
+                  Featured <span>
+                  P</span>rojects
+               </div>
+               <nav class="about__nav">
+                  <div class="about__link line">
+                     all works
+                  </div>
+                  <div class="about__link">
+                     games
+                  </div>
+                  <div class="about__link">
+                     applications
+                  </div>
+                  <div class="about__link">
+                     content development
+                  </div>
+               </nav>
+            </div>
+         </div>
          <div class="galery__intro">
             <div class="galery__photo">
                <img src="img/galery/Layer_10.jpg" alt="">
@@ -319,7 +318,7 @@
          </div>
       </div>
    </div>
-   <div class="process">
+   <div class="process _animate">
       <div class="container">
          <div class="process__body">
             <div class="process__title">Strategic <span>P</span>rocess</div>
@@ -363,9 +362,9 @@
          </div>
       </div>
    </div>
-   <div class="services">
+   <div class="services _animate">
       <div class="container">
-         <div class="services__inner">
+         <div class="services__inner ">
             <div class="services__top">
                <h1>
                   Services <span>P</span>rovided
@@ -410,10 +409,10 @@
          </div>
       </div>
    </div>
-   <div class="team">
+   <div class="team _animate">
       <div class="container">
-         <div class="team__inner">
-            <div class="team__logo">
+         <div class="team__inner ">
+            <div class="team__logo ">
                <h1>
                   Our <span>T</span>eam
                </h1>
@@ -477,9 +476,9 @@
          </div>
       </div>
    </div>
-   <div class="testimonials">
+   <div class="testimonials _animate">
       <div class="container">
-         <div class="testimonials__inner">
+         <div class="testimonials__inner ">
             <div class="testimonials__logo">
                <span>
                Testimonials
@@ -511,9 +510,9 @@
          </div>
       </div>
    </div>
-   <div class="blogs">
+   <div class="blogs _animate">
       <div class="container">
-         <div class="blogs__inner">
+         <div class="blogs__inner ">
             <div class="blogs__nav">
                <div class="blogs__logo">
                   <span>
@@ -902,9 +901,9 @@
          </div>
       </div>
    </div>
-   <div class="contact">
+   <div class="contact _animate">
       <div class="container">
-         <div class="contact__inner">
+         <div class="contact__inner ">
             <div class="contact__map">
                <img src="img/contact/Layer_52.jpg" alt="">
             </div>
@@ -973,9 +972,9 @@
          </div>
       </div>
    </div>
-   <footer class="footer">
+   <footer class="footer _animate">
       <div class="container">
-         <div class="footer__inner">
+         <div class="footer__inner ">
             <div class="footer__burger">
                <div class="logo__burger">
                      <span></span>
