--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                L341.91,330.654L341.91,330.654z"/>
          </g>
       </symbol>
+      <symbol id="corner"viewBox="0 0 76 76">
+         <g>
+            <path  stroke-width="0.2" stroke-linejoin="round" d="M 57,19L 8.60117,19C 7.57586,20.5832 6.67496,22.2545 5.91232,24L 52,24L 52,70.0877C 53.7455,69.3251 55.4168,68.4242 57,67.3988L 57,19 Z "/>
+         </g>
+      </symbol>
    </svg>
    <title>Document</title>
 </head>
@@ -342,7 +347,6 @@
                   <div class="process__middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis molestie dignissim. Nulla pellentesque et nisi et euismod. Pellentesque quis tristique magna.
                      </div>
                   <div class="process__foot">Maecenas est risus, tristique volutpat sagittis vel, feugiat consectetur diam. Suspendisse justo sem, molestie tincidunt</div>
-                  
                </div>
                <div class="process__element">
                   <img src="img/process/Layer_23.jpg
@@ -1011,7 +1015,20 @@
                      </svg>
                   </a>
                </div>
+               <div class="footer__tap">
+                  <div class="footer__tap--text">next</div>
+                  <div class="footer__photo">
+                     <svg class="footer__photo--1">
+                        <use xlink:href="#corner"></use>
+                     </svg>
+                     <svg class="footer__photo--2">
+                        <use xlink:href="#corner"></use>
+                     </svg>
+                  </div>
+               </div>
             </div>
+            <div class="footer__PE"></div>
+
             <div class="footer__right">
                <div class="footer__name">
                   <span>We</span> create 
