--- a/index.html
+++ b/index.html
@@ -905,6 +905,62 @@
          </div>
       </div>
    </div>
+   <div class="test _animate">
+      <div class="container">
+         <div class="test__inner">
+            <div class="swiper">
+               <div class="swiper__container">
+                  <div class="swiper__line">
+                     <div class="swiper__item _back--left">
+                        <img src="img/Layer_10.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_11.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item _back--right">
+                        <img src="img/Layer_12.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_13.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_14.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_15.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_16.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_10.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_11.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_12.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_13.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_14.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_15.jpg" alt="img">
+                     </div>
+                     <div class="swiper__item">
+                        <img src="img/Layer_16.jpg" alt="img">
+                     </div>
+                  </div>
+                  <div class="swiper__left"><</div>
+                  <div class="swiper__right">></div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
    <div class="contact _animate">
       <div class="container">
          <div class="contact__inner ">
